--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ember-quickstart",
+  "name": "frontend-vlag-poc",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for ember-quickstart goes here",
+  "description": "Frontend app for VLAG POC",
   "repository": "",
   "license": "MIT",
   "author": "",
