--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.1.0",
     "ember-fetch": "^8.1.2",
+    "ember-leaflet": "^5.1.3",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^8.0.0",
+    "leaflet": "^1.9.4",
     "loader.js": "^4.7.0",
     "prettier": "^2.8.8",
     "qunit": "^2.19.4",
