--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clean-css": "^2.0.0",
     "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-fastboot": "^4.1.2",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^11.0.1",
@@ -51,6 +52,7 @@
     "ember-fetch": "^8.1.2",
     "ember-leaflet": "^5.1.3",
     "ember-load-initializers": "^2.1.2",
+    "ember-metis": "^0.9.0",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^7.0.0",
