--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "@triply/yasgui": "^4.2.28",
     "ember-concurrency": "^4.0.0"
   },
   "fastbootDependencies": [
