--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ember-data": "~4.11.3",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-metis": "^0.9.0",
+    "ember-metis": "https://github.com/andreo141/ember-metis.git",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^7.0.0",
