--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@andreo141/ember-metis": "0.9.4",
     "@appuniversum/ember-appuniversum": "^3.0.0",
     "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-proposal-decorators": "^7.22.5",
@@ -51,14 +52,12 @@
     "ember-data": "~4.11.3",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-metis": "https://github.com/andreo141/ember-metis.git",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^7.0.0",
     "ember-resolver": "^10.1.1",
     "ember-source": "~4.12.0",
     "ember-template-lint": "^5.11.0",
-    "ember-welcome-page": "^7.0.2",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-ember": "^11.9.0",
