--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
-    "@andreo141/ember-metis": "0.9.9",
+    "ember-metis": "https://github.com/andreo141/ember-metis.git",
     "@appuniversum/ember-appuniversum": "^3.0.0",
     "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-proposal-decorators": "^7.22.5",
